6355846/src/main/java/nl/bve/uva/oberon/parser/OberonParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g 2011-01-29 14:47:25

package nl.bve.uva.oberon.parser;

import nl.bve.uva.oberon.ast.OberonRootNode;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class OberonParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DECL", "PROCEDURE", "TYPEDEF", "CONSTDEF", "VARDEF", "NEWLINE", "WS", "LETTER", "DIGIT", "'.'", "'['", "']'", "'('", "')'", "'~'", "'*'", "'DIV'", "'MOD'", "'&'", "'+'", "'-'", "'OR'", "'='", "'#'", "'<'", "'<='", "'>'", "'>='", "':='", "','", "'IF'", "'THEN'", "'ELSIF'", "'ELSE'", "'END'", "'WHILE'", "'DO'", "';'", "'ARRAY'", "'OF'", "':'", "'RECORD'", "'BEGIN'", "'MODULE'"
    };
    public static final int EOF=-1;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int DECL=4;
    public static final int PROCEDURE=5;
    public static final int TYPEDEF=6;
    public static final int CONSTDEF=7;
    public static final int VARDEF=8;
    public static final int NEWLINE=9;
    public static final int WS=10;
    public static final int LETTER=11;
    public static final int DIGIT=12;

    // delegates
    // delegators


        public OberonParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public OberonParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return OberonParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g"; }


    public static class ident_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ident"
    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:32:1: ident : LETTER ( LETTER | DIGIT )* ;
    public final OberonParser.ident_return ident() throws RecognitionException {
        OberonParser.ident_return retval = new OberonParser.ident_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token LETTER1=null;
        Token set2=null;

        Object LETTER1_tree=null;
        Object set2_tree=null;

        try {
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:32:7: ( LETTER ( LETTER | DIGIT )* )
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:32:9: LETTER ( LETTER | DIGIT )*
            {
            root_0 = (Object)adaptor.nil();

            LETTER1=(Token)match(input,LETTER,FOLLOW_LETTER_in_ident137); 
            LETTER1_tree = (Object)adaptor.create(LETTER1);
            adaptor.addChild(root_0, LETTER1_tree);

            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:32:16: ( LETTER | DIGIT )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=LETTER && LA1_0<=DIGIT)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:
            	    {
            	    set2=(Token)input.LT(1);
            	    if ( (input.LA(1)>=LETTER && input.LA(1)<=DIGIT) ) {
            	        input.consume();
            	        adaptor.addChild(root_0, (Object)adaptor.create(set2));
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ident"

    public static class integer_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "integer"
    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:34:1: integer : DIGIT ( DIGIT )* ;
    public final OberonParser.integer_return integer() throws RecognitionException {
        OberonParser.integer_return retval = new OberonParser.integer_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token DIGIT3=null;
        Token DIGIT4=null;

        Object DIGIT3_tree=null;
        Object DIGIT4_tree=null;

        try {
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:34:9: ( DIGIT ( DIGIT )* )
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:34:11: DIGIT ( DIGIT )*
            {
            root_0 = (Object)adaptor.nil();

            DIGIT3=(Token)match(input,DIGIT,FOLLOW_DIGIT_in_integer155); 
            DIGIT3_tree = (Object)adaptor.create(DIGIT3);
            adaptor.addChild(root_0, DIGIT3_tree);

            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:34:17: ( DIGIT )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==DIGIT) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:34:18: DIGIT
            	    {
            	    DIGIT4=(Token)match(input,DIGIT,FOLLOW_DIGIT_in_integer158); 
            	    DIGIT4_tree = (Object)adaptor.create(DIGIT4);
            	    adaptor.addChild(root_0, DIGIT4_tree);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "integer"

    public static class number_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "number"
    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:36:1: number : integer ;
    public final OberonParser.number_return number() throws RecognitionException {
        OberonParser.number_return retval = new OberonParser.number_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        OberonParser.integer_return integer5 = null;



        try {
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:36:8: ( integer )
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:36:10: integer
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_integer_in_number168);
            integer5=integer();

            state._fsp--;

            adaptor.addChild(root_0, integer5.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "number"

    public static class selector_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "selector"
    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:38:1: selector : ( '.' ident | '[' expression ']' )* ;
    public final OberonParser.selector_return selector() throws RecognitionException {
        OberonParser.selector_return retval = new OberonParser.selector_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal6=null;
        Token char_literal8=null;
        Token char_literal10=null;
        OberonParser.ident_return ident7 = null;

        OberonParser.expression_return expression9 = null;


        Object char_literal6_tree=null;
        Object char_literal8_tree=null;
        Object char_literal10_tree=null;

        try {
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:38:9: ( ( '.' ident | '[' expression ']' )* )
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:38:11: ( '.' ident | '[' expression ']' )*
            {
            root_0 = (Object)adaptor.nil();

            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:38:11: ( '.' ident | '[' expression ']' )*
            loop3:
            do {
                int alt3=3;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==13) ) {
                    alt3=1;
                }
                else if ( (LA3_0==14) ) {
                    alt3=2;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:38:12: '.' ident
            	    {
            	    char_literal6=(Token)match(input,13,FOLLOW_13_in_selector176); 
            	    char_literal6_tree = (Object)adaptor.create(char_literal6);
            	    adaptor.addChild(root_0, char_literal6_tree);

            	    pushFollow(FOLLOW_ident_in_selector178);
            	    ident7=ident();

            	    state._fsp--;

            	    adaptor.addChild(root_0, ident7.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:38:24: '[' expression ']'
            	    {
            	    char_literal8=(Token)match(input,14,FOLLOW_14_in_selector182); 
            	    char_literal8_tree = (Object)adaptor.create(char_literal8);
            	    adaptor.addChild(root_0, char_literal8_tree);

            	    pushFollow(FOLLOW_expression_in_selector184);
            	    expression9=expression();

            	    state._fsp--;

            	    adaptor.addChild(root_0, expression9.getTree());
            	    char_literal10=(Token)match(input,15,FOLLOW_15_in_selector186); 
            	    char_literal10_tree = (Object)adaptor.create(char_literal10);
            	    adaptor.addChild(root_0, char_literal10_tree);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "selector"

    public static class factor_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "factor"
    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:40:1: factor : ( ident selector | number | '(' expression ')' | '~' factor );
    public final OberonParser.factor_return factor() throws RecognitionException {
        OberonParser.factor_return retval = new OberonParser.factor_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal14=null;
        Token char_literal16=null;
        Token char_literal17=null;
        OberonParser.ident_return ident11 = null;

        OberonParser.selector_return selector12 = null;

        OberonParser.number_return number13 = null;

        OberonParser.expression_return expression15 = null;

        OberonParser.factor_return factor18 = null;


        Object char_literal14_tree=null;
        Object char_literal16_tree=null;
        Object char_literal17_tree=null;

        try {
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:40:8: ( ident selector | number | '(' expression ')' | '~' factor )
            int alt4=4;
            switch ( input.LA(1) ) {
            case LETTER:
                {
                alt4=1;
                }
                break;
            case DIGIT:
                {
                alt4=2;
                }
                break;
            case 16:
                {
                alt4=3;
                }
                break;
            case 18:
                {
                alt4=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }

            switch (alt4) {
                case 1 :
                    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:40:10: ident selector
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_ident_in_factor199);
                    ident11=ident();

                    state._fsp--;

                    adaptor.addChild(root_0, ident11.getTree());
                    pushFollow(FOLLOW_selector_in_factor201);
                    selector12=selector();

                    state._fsp--;

                    adaptor.addChild(root_0, selector12.getTree());

                    }
                    break;
                case 2 :
                    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:40:27: number
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_number_in_factor205);
                    number13=number();

                    state._fsp--;

                    adaptor.addChild(root_0, number13.getTree());

                    }
                    break;
                case 3 :
                    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:40:36: '(' expression ')'
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal14=(Token)match(input,16,FOLLOW_16_in_factor209); 
                    char_literal14_tree = (Object)adaptor.create(char_literal14);
                    adaptor.addChild(root_0, char_literal14_tree);

                    pushFollow(FOLLOW_expression_in_factor211);
                    expression15=expression();

                    state._fsp--;

                    adaptor.addChild(root_0, expression15.getTree());
                    char_literal16=(Token)match(input,17,FOLLOW_17_in_factor213); 
                    char_literal16_tree = (Object)adaptor.create(char_literal16);
                    adaptor.addChild(root_0, char_literal16_tree);


                    }
                    break;
                case 4 :
                    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:40:57: '~' factor
                    {
                    root_0 = (Object)adaptor.nil();

                    char_literal17=(Token)match(input,18,FOLLOW_18_in_factor217); 
                    char_literal17_tree = (Object)adaptor.create(char_literal17);
                    adaptor.addChild(root_0, char_literal17_tree);

                    pushFollow(FOLLOW_factor_in_factor219);
                    factor18=factor();

                    state._fsp--;

                    adaptor.addChild(root_0, factor18.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "factor"

    public static class term_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "term"
    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:42:1: term : factor ( ( '*' | 'DIV' | 'MOD' | '&' ) factor )* ;
    public final OberonParser.term_return term() throws RecognitionException {
        OberonParser.term_return retval = new OberonParser.term_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set20=null;
        OberonParser.factor_return factor19 = null;

        OberonParser.factor_return factor21 = null;


        Object set20_tree=null;

        try {
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:42:6: ( factor ( ( '*' | 'DIV' | 'MOD' | '&' ) factor )* )
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:42:8: factor ( ( '*' | 'DIV' | 'MOD' | '&' ) factor )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_factor_in_term228);
            factor19=factor();

            state._fsp--;

            adaptor.addChild(root_0, factor19.getTree());
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:42:15: ( ( '*' | 'DIV' | 'MOD' | '&' ) factor )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( ((LA5_0>=19 && LA5_0<=22)) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:42:16: ( '*' | 'DIV' | 'MOD' | '&' ) factor
            	    {
            	    set20=(Token)input.LT(1);
            	    if ( (input.LA(1)>=19 && input.LA(1)<=22) ) {
            	        input.consume();
            	        adaptor.addChild(root_0, (Object)adaptor.create(set20));
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_factor_in_term247);
            	    factor21=factor();

            	    state._fsp--;

            	    adaptor.addChild(root_0, factor21.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "term"

    public static class simpleExpression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "simpleExpression"
    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:44:1: simpleExpression : ( '+' | '-' )? term ( ( '+' | '-' | 'OR' ) term )* ;
    public final OberonParser.simpleExpression_return simpleExpression() throws RecognitionException {
        OberonParser.simpleExpression_return retval = new OberonParser.simpleExpression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set22=null;
        Token set24=null;
        OberonParser.term_return term23 = null;

        OberonParser.term_return term25 = null;


        Object set22_tree=null;
        Object set24_tree=null;

        try {
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:45:2: ( ( '+' | '-' )? term ( ( '+' | '-' | 'OR' ) term )* )
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:45:4: ( '+' | '-' )? term ( ( '+' | '-' | 'OR' ) term )*
            {
            root_0 = (Object)adaptor.nil();

            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:45:4: ( '+' | '-' )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( ((LA6_0>=23 && LA6_0<=24)) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:
                    {
                    set22=(Token)input.LT(1);
                    if ( (input.LA(1)>=23 && input.LA(1)<=24) ) {
                        input.consume();
                        adaptor.addChild(root_0, (Object)adaptor.create(set22));
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }


                    }
                    break;

            }

            pushFollow(FOLLOW_term_in_simpleExpression269);
            term23=term();

            state._fsp--;

            adaptor.addChild(root_0, term23.getTree());
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:45:22: ( ( '+' | '-' | 'OR' ) term )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( ((LA7_0>=23 && LA7_0<=25)) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:45:23: ( '+' | '-' | 'OR' ) term
            	    {
            	    set24=(Token)input.LT(1);
            	    if ( (input.LA(1)>=23 && input.LA(1)<=25) ) {
            	        input.consume();
            	        adaptor.addChild(root_0, (Object)adaptor.create(set24));
            	        state.errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse = new MismatchedSetException(null,input);
            	        throw mse;
            	    }

            	    pushFollow(FOLLOW_term_in_simpleExpression282);
            	    term25=term();

            	    state._fsp--;

            	    adaptor.addChild(root_0, term25.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "simpleExpression"

    public static class expression_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:47:1: expression : simpleExpression ( ( '=' | '#' | '<' | '<=' | '>' | '>=' ) simpleExpression )? ;
    public final OberonParser.expression_return expression() throws RecognitionException {
        OberonParser.expression_return retval = new OberonParser.expression_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token set27=null;
        OberonParser.simpleExpression_return simpleExpression26 = null;

        OberonParser.simpleExpression_return simpleExpression28 = null;


        Object set27_tree=null;

        try {
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:48:2: ( simpleExpression ( ( '=' | '#' | '<' | '<=' | '>' | '>=' ) simpleExpression )? )
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:48:4: simpleExpression ( ( '=' | '#' | '<' | '<=' | '>' | '>=' ) simpleExpression )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_simpleExpression_in_expression294);
            simpleExpression26=simpleExpression();

            state._fsp--;

            adaptor.addChild(root_0, simpleExpression26.getTree());
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:48:21: ( ( '=' | '#' | '<' | '<=' | '>' | '>=' ) simpleExpression )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( ((LA8_0>=26 && LA8_0<=31)) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:48:22: ( '=' | '#' | '<' | '<=' | '>' | '>=' ) simpleExpression
                    {
                    set27=(Token)input.LT(1);
                    if ( (input.LA(1)>=26 && input.LA(1)<=31) ) {
                        input.consume();
                        adaptor.addChild(root_0, (Object)adaptor.create(set27));
                        state.errorRecovery=false;
                    }
                    else {
                        MismatchedSetException mse = new MismatchedSetException(null,input);
                        throw mse;
                    }

                    pushFollow(FOLLOW_simpleExpression_in_expression321);
                    simpleExpression28=simpleExpression();

                    state._fsp--;

                    adaptor.addChild(root_0, simpleExpression28.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class assignment_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "assignment"
    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:50:1: assignment : ident selector ':=' expression ;
    public final OberonParser.assignment_return assignment() throws RecognitionException {
        OberonParser.assignment_return retval = new OberonParser.assignment_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal31=null;
        OberonParser.ident_return ident29 = null;

        OberonParser.selector_return selector30 = null;

        OberonParser.expression_return expression32 = null;


        Object string_literal31_tree=null;

        try {
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:51:2: ( ident selector ':=' expression )
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:51:4: ident selector ':=' expression
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_ident_in_assignment334);
            ident29=ident();

            state._fsp--;

            adaptor.addChild(root_0, ident29.getTree());
            pushFollow(FOLLOW_selector_in_assignment336);
            selector30=selector();

            state._fsp--;

            adaptor.addChild(root_0, selector30.getTree());
            string_literal31=(Token)match(input,32,FOLLOW_32_in_assignment338); 
            string_literal31_tree = (Object)adaptor.create(string_literal31);
            adaptor.addChild(root_0, string_literal31_tree);

            pushFollow(FOLLOW_expression_in_assignment340);
            expression32=expression();

            state._fsp--;

            adaptor.addChild(root_0, expression32.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "assignment"

    public static class actualParameters_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "actualParameters"
    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:53:1: actualParameters : '(' ( expression ( ',' expression )* )? ')' ;
    public final OberonParser.actualParameters_return actualParameters() throws RecognitionException {
        OberonParser.actualParameters_return retval = new OberonParser.actualParameters_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal33=null;
        Token char_literal35=null;
        Token char_literal37=null;
        OberonParser.expression_return expression34 = null;

        OberonParser.expression_return expression36 = null;


        Object char_literal33_tree=null;
        Object char_literal35_tree=null;
        Object char_literal37_tree=null;

        try {
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:54:2: ( '(' ( expression ( ',' expression )* )? ')' )
            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:54:4: '(' ( expression ( ',' expression )* )? ')'
            {
            root_0 = (Object)adaptor.nil();

            char_literal33=(Token)match(input,16,FOLLOW_16_in_actualParameters350); 
            char_literal33_tree = (Object)adaptor.create(char_literal33);
            adaptor.addChild(root_0, char_literal33_tree);

            // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:54:8: ( expression ( ',' expression )* )?
            int alt10=2;
            int LA10_0 = input.LA(1);

            if ( ((LA10_0>=LETTER && LA10_0<=DIGIT)||LA10_0==16||LA10_0==18||(LA10_0>=23 && LA10_0<=24)) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:54:9: expression ( ',' expression )*
                    {
                    pushFollow(FOLLOW_expression_in_actualParameters353);
                    expression34=expression();

                    state._fsp--;

                    adaptor.addChild(root_0, expression34.getTree());
                    // C:\\Eclipse\\workspace\\OberonInterpreter\\grammar\\Oberon.g:54:20: ( ',' expression )*
                    loop9:
                    do {
                        int alt9=2;
                        int LA9_0 = input.LA(1);

                        if ( (LA9_0==33) ) {
